# hkmcmd

./: .gitignore  README.md  README.rst  calc_voxels.py  calculate_MSD.py  calculate_diffusion.py  calculate_running_diffusion_rates.py  classes.py  customargparse.py  data_file_parser.py  diffusion.py  environment.yaml  filehandlers.py  filehandlers_general.py  filehandlers_lammps.py  frame_generator.py  functions.py  gen_initial_hybridmdmc.py  hybridmdmc.py  initialize_hkmcmd_system.py  interactions.py  kmc.py  lammps_files_classes.py  mean_displacement.py  mol_classes.py  parsers.py  particle_interactions.py  pure_kmc.py  pyproject.toml  reaction.py  run_hkmcmd.py  run_purekMC.py  run_rsATmd.py  sensitivity_analysis_diffusion_rates.py  setup.py  simulation_system.py  summarize.py  summarize_systems.py  system.py  test_voxels.py  (+3 more)
Archive/: diffusion_archive06Dec2024.py
BetaParallelization/: hybridmdmc.py
_auxiliary/: concatenate_files.py  mean_displacement.py  pure_kmc.py  sensitivity_analysis_diffusion_rates.py
hkmcmd/: MSD.py  diffusion.py  initialize.py  interactions.py  io.py  reaction.py  summarize.py  system.py  utility.py  voxels.py
hybrid_mdmc/: calculate_diffusion.py  calculate_mean_displacement.py  run_hkmcmd.py  run_purekMC.py  voxels.py
tests/: FictionSystemTest.ipynb  combustion.in.data  combustion.json  combustion.system_state.json  diffusion_fiction.diffusion.lammpstrj  fiction-1.end.data  fiction-1.in.data  fiction-1.in.init  fiction-1.system_state.json  fiction.end.data  fiction.in.data  fiction.system_state.json  msd_fiction.diffusion.lammpstrj  (+12 more)
(+37 files in other folders)
