[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hkmcmd"
version = "1.0.0"
description = "Hybrid kinetic Monte Carlo/Molecular Dynamics tools"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Dylan M. Gilley", email = "dylan.gilley@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.2",
  "scipy>=1.15",
  "pandas>=2.2",
  "scikit-learn>=1.6",
  "matplotlib>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "mypy",
]
docs = [
  "sphinx",
]

[project.urls]
Homepage = "https://github.com/dmgilley/hkmcmd.git"
Documentation = ""
Source = "https://github.com/dmgilley/hkmcmd.git"

[tool.setuptools.packages.find]
include = ["hkmcmd*"]
